--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.tiger{
+    background-image: url(./img/Декор-круги.png);
+    width: 100%;
+    height: 300px;
+}
