--- a/src/output.css
+++ b/src/output.css
@@ -596,8 +596,8 @@ video {
   left: -5rem;
 }
 
-.-top-\[50px\] {
-  top: -50px;
+.-top-\[200px\] {
+  top: -200px;
 }
 
 .-top-\[80px\] {
@@ -608,20 +608,32 @@ video {
   left: 5rem;
 }
 
-.left-\[244px\] {
-  left: 244px;
+.left-\[334px\] {
+  left: 334px;
+}
+
+.left-\[437px\] {
+  left: 437px;
+}
+
+.top-44 {
+  top: 11rem;
 }
 
 .top-\[100px\] {
   top: 100px;
 }
 
-.top-\[65px\] {
-  top: 65px;
+.top-\[200px\] {
+  top: 200px;
 }
 
 .top-\[50px\] {
   top: 50px;
+}
+
+.top-\[65px\] {
+  top: 65px;
 }
 
 .mx-auto {
@@ -633,18 +645,6 @@ video {
   margin-left: -8rem;
 }
 
-.ml-5 {
-  margin-left: 1.25rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mt-\[40px\] {
-  margin-top: 40px;
-}
-
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -653,28 +653,44 @@ video {
   margin-bottom: 2rem;
 }
 
+.ml-5 {
+  margin-left: 1.25rem;
+}
+
+.ml-\[130px\] {
+  margin-left: 130px;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .mt-20 {
   margin-top: 5rem;
 }
 
-.ml-\[40px\] {
-  margin-left: 40px;
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
-.ml-\[90px\] {
-  margin-left: 90px;
+.mt-52 {
+  margin-top: 13rem;
 }
 
-.ml-\[120px\] {
-  margin-left: 120px;
+.mt-\[500px\] {
+  margin-top: 500px;
 }
 
-.ml-\[130px\] {
-  margin-left: 130px;
+.mt-\[40px\] {
+  margin-top: 40px;
+}
+
+.mt-\[140px\] {
+  margin-top: 140px;
 }
 
 .block {
@@ -693,6 +709,14 @@ video {
   display: none;
 }
 
+.h-\[690px\] {
+  height: 690px;
+}
+
+.h-\[900px\] {
+  height: 900px;
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -705,20 +729,20 @@ video {
   justify-content: center;
 }
 
-.justify-between {
-  justify-content: space-between;
-}
-
 .justify-around {
   justify-content: space-around;
 }
 
-.gap-5 {
-  gap: 1.25rem;
+.gap-32 {
+  gap: 8rem;
 }
 
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .gap-6 {
@@ -738,24 +762,24 @@ video {
   border-radius: 0.5rem;
 }
 
-.bg-\[\#f28b64\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 139 100 / var(--tw-bg-opacity, 1));
-}
-
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
-}
-
 .bg-\[\#5290ea\] {
   --tw-bg-opacity: 1;
   background-color: rgb(82 144 234 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[\#f28b64\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 139 100 / var(--tw-bg-opacity, 1));
+}
+
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
 }
 
 .p-4 {
@@ -794,14 +818,19 @@ video {
   font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-5xl {
@@ -809,14 +838,14 @@ video {
   line-height: 1;
 }
 
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 
 .font-bold {
@@ -832,24 +861,26 @@ video {
   color: rgb(107 114 128 / var(--tw-text-opacity, 1));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity, 1));
 }
 
-.underline {
-  text-decoration-line: underline;
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.tiger{
+  background-image: url(./img/Декор-круги.png);
+  width: 100%;
+  height: 300px;
 }
 
 @media (min-width: 640px) {
@@ -862,12 +893,6 @@ video {
   }
 }
 
-@media (min-width: 768px) {
-  .md\:text-center {
-    text-align: center;
-  }
-}
-
 @media (min-width: 1024px) {
   .lg\:relative {
     position: relative;
@@ -875,6 +900,18 @@ video {
 
   .lg\:-left-20 {
     left: -5rem;
+  }
+
+  .lg\:left-\[437px\] {
+    left: 437px;
+  }
+
+  .lg\:left-20 {
+    left: 5rem;
+  }
+
+  .lg\:mt-\[500px\] {
+    margin-top: 500px;
   }
 
   .lg\:ml-5 {
@@ -885,13 +922,12 @@ video {
     display: flex;
   }
 
-  .lg\:justify-between {
-    justify-content: space-between;
+  .lg\:h-\[690px\] {
+    height: 690px;
   }
 
-  .lg\:bg-\[\#f28b64\] {
-    --tw-bg-opacity: 1;
-    background-color: rgb(242 139 100 / var(--tw-bg-opacity, 1));
+  .lg\:justify-between {
+    justify-content: space-between;
   }
 
   .lg\:text-xl {
@@ -899,7 +935,8 @@ video {
     line-height: 1.75rem;
   }
 
-  .lg\:\*\:-left-20 > * {
-    left: -5rem;
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 }
