--- a/src/output.css
+++ b/src/output.css
@@ -612,10 +612,6 @@ video {
   left: 334px;
 }
 
-.left-\[437px\] {
-  left: 437px;
-}
-
 .top-44 {
   top: 11rem;
 }
@@ -634,6 +630,30 @@ video {
 
 .top-\[65px\] {
   top: 65px;
+}
+
+.-top-\[600px\] {
+  top: -600px;
+}
+
+.-top-\[300px\] {
+  top: -300px;
+}
+
+.-top-\[400px\] {
+  top: -400px;
+}
+
+.top-\[700px\] {
+  top: 700px;
+}
+
+.top-\[300px\] {
+  top: 300px;
+}
+
+.top-\[400px\] {
+  top: 400px;
 }
 
 .mx-auto {
@@ -681,16 +701,32 @@ video {
   margin-top: 13rem;
 }
 
-.mt-\[500px\] {
-  margin-top: 500px;
-}
-
-.mt-\[40px\] {
-  margin-top: 40px;
-}
-
 .mt-\[140px\] {
   margin-top: 140px;
+}
+
+.mt-\[\] {
+  margin-top: ;
+}
+
+.mt-\[800px\] {
+  margin-top: 800px;
+}
+
+.mt-\[900px\] {
+  margin-top: 900px;
+}
+
+.mt-\[1500px\] {
+  margin-top: 1500px;
+}
+
+.mt-\[1800px\] {
+  margin-top: 1800px;
+}
+
+.mt-\[1700px\] {
+  margin-top: 1700px;
 }
 
 .block {
@@ -711,10 +747,6 @@ video {
 
 .h-\[690px\] {
   height: 690px;
-}
-
-.h-\[900px\] {
-  height: 900px;
 }
 
 .grid-cols-1 {
@@ -880,7 +912,7 @@ video {
 .tiger{
   background-image: url(./img/Декор-круги.png);
   width: 100%;
-  height: 300px;
+  height: 200px;
 }
 
 @media (min-width: 640px) {
@@ -902,28 +934,20 @@ video {
     left: -5rem;
   }
 
-  .lg\:left-\[437px\] {
-    left: 437px;
-  }
-
   .lg\:left-20 {
     left: 5rem;
+  }
+
+  .lg\:left-\[437px\] {
+    left: 437px;
   }
 
   .lg\:mt-\[500px\] {
     margin-top: 500px;
   }
 
-  .lg\:ml-5 {
-    margin-left: 1.25rem;
-  }
-
   .lg\:flex {
     display: flex;
-  }
-
-  .lg\:h-\[690px\] {
-    height: 690px;
   }
 
   .lg\:justify-between {
@@ -933,10 +957,5 @@ video {
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .lg\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
   }
 }
